syntax = "proto3";
option java_multiple_files = true;
option java_package = "proto";
option go_package = "nameserver/proto";

import "pagination.proto";

message Location {
    string name = 1;
    optional string description = 2;
    string location_type_name = 3;
    optional string parent_location_name = 4;
}
message CreateLocationRequest {
    Location location = 1;
}
message LocationResponse {
    Location location = 1;
}

message LocationListResponse {
    repeated Location locations = 1;
    PaginationResponse pagination = 2;
}
message ListLocationsRequest {
    optional string location_type_name = 1;
    optional string parent_location_name = 2;   
    optional string name = 3; 
    optional PaginationRequest pagination = 4;
}

message UpdateLocationRequest { 
    Location location = 1;
}

message DeleteLocationRequest {
    string name = 1;
}
message GetLocationRequest {
    string name = 1;
}